# dailyWriting

./: .gitignore  CHANGELOG.md  CLAUDE.md  DailyWriting-windows.spec  DailyWriting.spec  LICENSE  README.md  TAG_SYSTEM_SPEC.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
core/: backup.py  config.py  exceptions.py  export.py  logging_config.py  models.py  prompt_builder.py  search.py  session_manager.py  statistics.py  stats.py  storage.py  streak_days.py  tags.py  topic_generator.py  utils.py
data/: streak_days.json
data/sessions/: 2025-11-18-65301eba-e92f-4ad4-a9c4-626531e66217.json  2025-11-24-7910e6d0-713d-4c37-9115-b4e8c4e247bb.json  2025-11-25-3ddbb284-b34c-4fdb-bc23-221bc3b01419.json  2025-11-26-c62df3f5-b75a-4197-b941-d9c367858b54.json  2025-11-27-d02b178c-e181-4ca2-842a-3f7965841e0a.json  2025-11-28-8af94c8c-c5e3-41fd-afb3-ae78ba0f7626.json
resources/: icon.icns
scripts/: build_app.bat  build_app.sh  create_icon.py  create_icon.sh
tests/: conftest.py
tests/core/: test_config.py  test_export.py  test_prompt_builder.py  test_search.py  test_statistics.py  test_stats.py  test_storage.py  test_utils.py
tests/ui/: test_theme.py
ui/: about_dialog.py  calendar_view.py  history_view.py  main_window.py  session_detail_dialog.py  session_list_dialog.py  session_view.py  settings_dialog.py  shortcuts_dialog.py  stats_view.py  tag_selector_dialog.py  theme.py
